Fix crash when deleting vector layers

This fix crashes two issues:

Crash 1

1) Create a vector layer
2) Don't manipulate with it in any form (important to keep the shape
   manager not initialized)
3) Remove this vector layer
4) Close the document without saving -> crash

Crash 2

1) Create a vector layer
2) Add a rectangle shape
3) Add some text inside the rectangle shape
4) Enter the "text contour editing mode"
5) Remove the vector layer
6) Close the document without saving -> crash

BUG:512649